users service working actuator endpoints added into services.

--- a/users_service/src/main/resources/application.properties
+++ b/users_service/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=users-service
+server.address=localhost
 server.port=8081
 spring.r2dbc.url=r2dbc:postgresql://postgresql.mtek.me/goArena
 spring.r2dbc.username=goArena
 spring.r2dbc.password=Qa1q2w3e!
 spring.r2dbc.initialization-mode=always
+eureka.instance.hostname=localhost
