--- a/service_discovery/src/main/resources/application.properties
+++ b/service_discovery/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8761
 eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false   
+eureka.client.fetchRegistry=false
+eureka.client.healthcheck.enabled=true
