database connection pool options added for users service

--- a/users_service/src/main/resources/application.properties
+++ b/users_service/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.application.name=users-service
 server.address=localhost
 server.port=8081
+eureka.instance.hostname=localhost
 spring.r2dbc.url=r2dbc:postgresql://postgresql.mtek.me/goArena
 spring.r2dbc.username=goArena
 spring.r2dbc.password=Qa1q2w3e!
 spring.r2dbc.initialization-mode=always
-eureka.instance.hostname=localhost
+spring.r2dbc.pool.enabled=true
+spring.r2dbc.pool.max-idle-time=5m
+spring.r2dbc.pool.initial-size=1
+spring.r2dbc.pool.max-size=10
+spring.r2dbc.pool.max-life-time=1m
+spring.r2dbc.pool.max-create-connection-time=5s
