--- a/user_service/src/main/resources/application.properties
+++ b/user_service/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=user-service
 server.address=localhost
 server.port=9003
-
 eureka.instance.hostname=localhost
 spring.r2dbc.url=r2dbc:postgresql://postgresql.mtek.me/goArena
 spring.r2dbc.username=goArena
@@ -14,10 +13,13 @@ spring.r2dbc.pool.max-size=10
 spring.r2dbc.pool.max-life-time=1m
 spring.r2dbc.pool.max-create-connection-time=5s
 
-keycloak.realm                      = goArena
-keycloak.auth-server-url            = http://docker.mtek.me:8082/auth
-keycloak.ssl-required               = none
-keycloak.resource                   = gorena
-keycloak.credentials.secret         = c3bf2aa9-1909-41bb-8f3c-8c3f2d40b63b
-keycloak.use-resource-role-mappings = true
-keycloak.bearer-only                = true
+keycloak.realm=goArena
+keycloak.auth-server-url=http://docker.mtek.me:8082/auth
+keycloak.ssl-required=none
+keycloak.resource=gorena
+keycloak.credentials.secret=c3bf2aa9-1909-41bb-8f3c-8c3f2d40b63b
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
+keycloak.public-client=true
+keycloak.allow-any-hostname=true
+
