--- a/user_service/src/main/resources/application.properties
+++ b/user_service/src/main/resources/application.properties
@@ -2,22 +2,25 @@ spring.application.name=user-service
 server.address=localhost
 server.port=9003
 eureka.instance.hostname=localhost
-spring.r2dbc.url=r2dbc:postgresql://postgresql.mtek.me/goArena
-spring.r2dbc.username=goArena
-spring.r2dbc.password=Qa1q2w3e!
-spring.r2dbc.initialization-mode=always
-spring.r2dbc.pool.enabled=true
-spring.r2dbc.pool.max-idle-time=5m
-spring.r2dbc.pool.initial-size=1
-spring.r2dbc.pool.max-size=10
-spring.r2dbc.pool.max-life-time=1m
-spring.r2dbc.pool.max-create-connection-time=5s
 
-keycloak.realm=goArena
+    keycloak.realm=goArena
 keycloak.auth-server-url=http://docker.mtek.me:8082/auth
 keycloak.ssl-required=none
 keycloak.resource=gorena
 keycloak.credentials.secret=c3bf2aa9-1909-41bb-8f3c-8c3f2d40b63b
 keycloak.use-resource-role-mappings=true
+spring.datasource.initialization-mode=always
+spring.datasource.continue-on-error=true
+#hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+#hibernate.hbm2ddl.auto=update
+#//spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://postgresql.mtek.me/goArena
+spring.datasource.username=goArena
+spring.datasource.password=Qa1q2w3e!spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=60000
+spring.datasource.hikari.maxLifetime=180000
 
-
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.hibernate.ddl-auto=update
