--- a/user_service/src/main/resources/application.properties
+++ b/user_service/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=user-service
-server.address=localhost
+#server.address=localhost
 server.port=9003
-eureka.instance.hostname=localhost
+#eureka.instance.hostname=host.docker.internal
 
-    keycloak.realm=goArena
+keycloak.realm=goArena
 keycloak.auth-server-url=http://docker.mtek.me:8082/auth
 keycloak.ssl-required=none
 keycloak.resource=gorena
@@ -16,11 +16,11 @@ spring.datasource.continue-on-error=true
 #//spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:postgresql://postgresql.mtek.me/goArena
 spring.datasource.username=goArena
-spring.datasource.password=Qa1q2w3e!spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.password=Qa1q2w3e!
+spring.datasource.hikari.connection-test-query=SELECT 1
 spring.datasource.hikari.connectionTimeout=30000
 spring.datasource.hikari.idleTimeout=60000
 spring.datasource.hikari.maxLifetime=180000
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=update
