Dashboard Service initialized

--- a/file_service/src/main/resources/application.properties
+++ b/file_service/src/main/resources/application.properties
@@ -9,18 +9,17 @@ keycloak.ssl-required=none
 keycloak.resource=gorena
 keycloak.credentials.secret=c3bf2aa9-1909-41bb-8f3c-8c3f2d40b63b
 keycloak.use-resource-role-mappings=true
-spring.datasource.initialization-mode=always
-spring.datasource.continue-on-error=true
-#hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-#hibernate.hbm2ddl.auto=update
-#//spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:postgresql://postgresql.mtek.me/goArena
-spring.datasource.username=goArena
-spring.datasource.password=Qa1q2w3e!
-spring.datasource.hikari.connection-test-query=SELECT 1
-spring.datasource.hikari.connectionTimeout=30000
-spring.datasource.hikari.idleTimeout=60000
-spring.datasource.hikari.maxLifetime=180000
+
+#spring.datasource.initialization-mode=always
+#spring.datasource.continue-on-error=true
+#
+#spring.datasource.url=jdbc:postgresql://postgresql.mtek.me/goArena
+#spring.datasource.username=goArena
+#spring.datasource.password=Qa1q2w3e!
+#spring.datasource.hikari.connection-test-query=SELECT 1
+#spring.datasource.hikari.connectionTimeout=30000
+#spring.datasource.hikari.idleTimeout=60000
+#spring.datasource.hikari.maxLifetime=180000
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
