Swagger Implementation Added

--- a/file_service/src/main/resources/application.properties
+++ b/file_service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=file-service
+spring.application.name=files-service
 #server.address=localhost
 server.port=9004
 #eureka.instance.hostname=localhost
@@ -39,3 +39,6 @@ spring.servlet.multipart.max-request-size=215MB
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-directory=/upload
+
+springdoc.api-docs.path=/api
+springdoc.swagger-ui.path=/swagger.html
