--- a/dashboard_service/src/main/resources/application.properties
+++ b/dashboard_service/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.datasource.hikari.maxLifetime=180000
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.api-docs.path=/api
+springdoc.swagger-ui.path=/swagger.html
