--- a/employee_service/src/main/resources/application.properties
+++ b/employee_service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=employee-service
+spring.application.name=employees-service
 #server.address=localhost
 server.port=9003
 #eureka.instance.hostname=host.docker.internal
@@ -24,3 +24,6 @@ spring.datasource.hikari.maxLifetime=180000
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+springdoc.api-docs.path=/api
+springdoc.swagger-ui.path=/swagger.html
