--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.5.3'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
