--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=gateway
-server.address=localhost
-eureka.instance.hostname=localhost
+#server.address=localhost
+#eureka.instance.hostname=localhost
 logging.level.reactor.netty=INFO
 spring.cloud.gateway.httpclient.wiretap=true
 spring.cloud.gateway.httpserver.wiretap=true
+springdoc.api-docs.path=/api
+springdoc.swagger-ui.path=/swagger.html
