--- a/file_service/src/main/resources/application.properties
+++ b/file_service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=files-service
 #server.address=localhost
 server.port=9004
 #eureka.instance.hostname=localhost
+eureka.client.service-url.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 
 keycloak.realm=goArena
 keycloak.auth-server-url=http://docker.mtek.me:8082/auth
@@ -9,7 +10,6 @@ keycloak.ssl-required=none
 keycloak.resource=gorena
 keycloak.credentials.secret=c3bf2aa9-1909-41bb-8f3c-8c3f2d40b63b
 keycloak.use-resource-role-mappings=true
-
 #spring.datasource.initialization-mode=always
 #spring.datasource.continue-on-error=true
 #
@@ -20,12 +20,9 @@ keycloak.use-resource-role-mappings=true
 #spring.datasource.hikari.connectionTimeout=30000
 #spring.datasource.hikari.idleTimeout=60000
 #spring.datasource.hikari.maxLifetime=180000
-
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=create
-
-
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
@@ -35,10 +32,8 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
-
 ## File Storage Properties
 # All files uploaded through the REST API will be stored in this directory
 file.upload-directory=/upload
-
 springdoc.api-docs.path=/api
 springdoc.swagger-ui.path=/swagger.html
