Eureka service environment variable fix

--- a/feed_service/src/main/resources/application.properties
+++ b/feed_service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=feeds-service
 #server.address=localhost
 server.port=9002
 #eureka.instance.hostname=localhost
+eureka.client.service-url.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 
 keycloak.realm=goArena
 keycloak.auth-server-url=http://docker.mtek.me:8082/auth
