--- a/dashboard_service/src/main/resources/application.properties
+++ b/dashboard_service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=dashboard-service
 #server.address=localhost
 server.port=9006
 #eureka.instance.hostname=host.docker.internal
+eureka.client.service-url.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 
 keycloak.realm=goArena
 keycloak.auth-server-url=http://docker.mtek.me:8082/auth
