--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=gateway
 #server.address=localhost
 #eureka.instance.hostname=localhost
+eureka.client.service-url.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 logging.level.reactor.netty=INFO
 spring.cloud.gateway.httpclient.wiretap=true
 spring.cloud.gateway.httpserver.wiretap=true
