--- a/service_discovery/src/main/resources/application.properties
+++ b/service_discovery/src/main/resources/application.properties
@@ -2,4 +2,5 @@ server.port=8761
 #eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
+eureka.client.service-url.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
 eureka.client.healthcheck.enabled=true
