Authorization working for auth service ( via /me )

--- a/auth_service/src/main/resources/application.properties
+++ b/auth_service/src/main/resources/application.properties
@@ -22,11 +22,13 @@ spring.jpa.hibernate.ddl-auto=update
 springdoc.api-docs.path=/api
 springdoc.swagger-ui.path=/swagger.html
 
-#okta.oauth2.issuer=https://dev-63928365.okta.com/oauth2/default
-#okta.oauth2.clientId=0oa4xu2vsl2L6Xy805d6
-#okta.oauth2.clientSecret=1Mu3GrFsgbFBVTCJyV9FjE1Rc89uHdZg5Y5rZnub
-#okta.oauth2.rolesClaim=groups
-#okta.oauth2.scope=["openid","email","profil"]
+okta.oauth2.issuer=https://dev-63928365.okta.com/oauth2/default
+okta.oauth2.clientId=0oa4xu2vsl2L6Xy805d6
+okta.oauth2.clientSecret=1Mu3GrFsgbFBVTCJyV9FjE1Rc89uHdZg5Y5rZnub
+okta.oauth2.rolesClaim=groups
+okta.oauth2.scope=["openid","email","profile"]
+
+
 okta.token.clientId=0oa4xu2vsl2L6Xy805d6
 okta.token.clientSecret=1Mu3GrFsgbFBVTCJyV9FjE1Rc89uHdZg5Y5rZnub
 okta.token.address=https://dev-63928365.okta.com/oauth2/default
