--- a/file_service/src/main/resources/application.properties
+++ b/file_service/src/main/resources/application.properties
@@ -37,3 +37,9 @@ spring.servlet.multipart.max-request-size=215MB
 file.upload-directory=/upload
 springdoc.api-docs.path=/api
 springdoc.swagger-ui.path=/swagger.html
+
+okta.oauth2.issuer=https://dev-63928365.okta.com/oauth2/default
+okta.oauth2.clientId=0oa4xu2vsl2L6Xy805d6
+okta.oauth2.clientSecret=1Mu3GrFsgbFBVTCJyV9FjE1Rc89uHdZg5Y5rZnub
+okta.oauth2.rolesClaim=groups
+okta.oauth2.scope=["openid","email","profile"]
