--- a/file_service/src/main/resources/application.properties
+++ b/file_service/src/main/resources/application.properties
@@ -13,7 +13,7 @@ keycloak.use-resource-role-mappings=true
 #spring.datasource.initialization-mode=always
 #spring.datasource.continue-on-error=true
 #
-#spring.datasource.url=jdbc:postgresql://postgresql.mtek.me/goArena
+#spring.datasource.url=jdbc:postgresql://postgresql/goArena
 #spring.datasource.username=goArena
 #spring.datasource.password=Qa1q2w3e!
 #spring.datasource.hikari.connection-test-query=SELECT 1
