--- a/employee_service/src/main/resources/application.properties
+++ b/employee_service/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.continue-on-error=true
 #hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 #hibernate.hbm2ddl.auto=update
 #//spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:postgresql://postgresql.mtek.me/goArena
+spring.datasource.url=jdbc:postgresql://postgresql/goArena
 spring.datasource.username=goArena
 spring.datasource.password=Qa1q2w3e!
 spring.datasource.hikari.connection-test-query=SELECT 1
