--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build: 
       context: .
       dockerfile: PostgreSql.DockerFile
+      image: turkcellpoc/postgresql:latest
     expose:
       - "5432"
     ports:
