--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.cloud.gateway.httpclient.wiretap=true
 spring.cloud.gateway.httpserver.wiretap=true
 springdoc.api-docs.path=/api
 springdoc.swagger-ui.path=/swagger.html
+spring.cloud.gateway.globalcors.cors-configurations.["/**"].allowed-origins=["*"]
+spring.cloud.gateway.globalcors.cors-configurations.["/**"].allowed-methods=["GET","POST","DELETE","PUT","OPTIONS"]
