--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.cloud.gateway.httpserver.wiretap=true
 springdoc.api-docs.path=/api
 springdoc.swagger-ui.path=/swagger.html
 spring.cloud.gateway.globalcors.cors-configurations.["/**"].allowed-origins=["*"]
-spring.cloud.gateway.globalcors.cors-configurations.["/**"].allowed-methods=["GET","POST","DELETE","PUT","OPTIONS"]
+spring.cloud.gateway.globalcors.cors-configurations.["/**"].allowed-methods=["GET","POST","DELETE","PUT","OPTIONS","PATCH"]
